--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header>
     <main>
         <h2>Software files for setting up Testbed</h2>
-        <p><a href="https://github.com/example-repo" target="_blank">Testbed Software</a></p>
+        <p><a href="https://github.com/kumars45/OpenIoT-Lab1" target="_blank">Testbed Software</a></p>
 
         <h2>About the Testbed</h2>
         <p>The testbed is designed for IoT research and development, focusing on wireless sensor networks and edge computing. 
